--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,12 @@
 			<version>3.12.0</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-amqp</artifactId>
+		</dependency>
+
+
 
 
 		<dependency>
