handler for userAbsencesConfirmed

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,3 @@
 queue.users-with-role-change=q.users-with-role-change
+queue.users-absences=q.users-absences
 am-service-url=http://ACCESS-MANAGEMENT/api
