intial configuration of messaging

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,7 @@
 queue.users-with-role-change=q.users-with-role-change
 queue.users-absences=q.users-absences
 am-service-url=http://ACCESS-MANAGEMENT/api
+
+
+queue.driver-request-acceptation=q.driver-request
+exchange.driver-request-acceptation=x.driver-request
