h2 db + fix to rabbit listener on driver transfer request

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,5 +3,14 @@ queue.users-absences=q.users-absences
 am-service-url=http://ACCESS-MANAGEMENT/api
 
 
-queue.driver-request-acceptation=q.driver-request
+queue.driver-request-acceptation=q.driver-request-acceptation
+queue.driver-request-submission=q.driver-request-submission
 exchange.driver-request-acceptation=x.driver-request
+
+
+#db
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
