refactor to rabbitmq listeners

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,7 @@ am-service-url=http://ACCESS-MANAGEMENT/api
 
 
 queue.driver-request-acceptation=q.driver-request-acceptation
+queue.transfer-request-submission=q.transfer-request-submission
 queue.driver-request-submission=q.driver-request-submission
 exchange.driver-request-acceptation=x.driver-request
 
