--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,7 @@
+spring.application.name=CAR-FLEET-SERVICE
+eureka.client.serviceUrl.defaultZone=http://eureka:password@localhost:8777/eureka/
+eureka.client.enabled=false
+
 queue.users-with-role-change=q.users-with-role-change
 queue.users-absences=q.users-absences
 am-service-url=http://ACCESS-MANAGEMENT/api
