planned events - configuration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,7 @@ eureka.client.enabled=false
 queue.users-with-role-change=q.users-with-role-change
 queue.users-absences=q.users-absences
 am-service-url=http://ACCESS-MANAGEMENT/api
+planned-events-service.url=http://PLANNED-EVENTS/api
 
 
 queue.driver-request-acceptation=q.driver-request-acceptation
